Travel::Status::DE::IRIS 1.46 - Mon May 04 2020

    * Document LWP::Protocol::https dependency
    * Discourage building with Geo::Distance 0.21.
      Geo::Distance 0.21, released on 7 Mar 2019, is the only release using
      GIS::Distance's distance_km method -- which was removed on 9 Mar 2019
      in GIS::Distance 0.14

Travel::Status::DE::IRIS 1.45 - Wed Mar 18 2020

    * Provide properly versioned Stations.pm file

Travel::Status::DE::IRIS 1.44 - Wed Mar 18 2020

    * Add delay code 67 (Behördliche Anordnung). Patch by @marudor

Travel::Status::DE::IRIS 1.43 - Tue Jan 21 2020

    * db-iris: Correctly set cache expiry. In 1.42, backend replies were cached
      indefinitely due to a typo

Travel::Status::DE::IRIS 1.42 - Wed Jan 15 2020

    * Result: Fix TO_JSON method
    * db-iris: Cache backend results by default
    * db-iris: New options: --json and --no-cache

Travel::Status::DE::IRIS 1.41 - Sun Dec 29 2019

    * Result: Add "wing_of" accessor
    * Follow name and DS100 change of Freiburg West (RFW) to
      Freiburg-Landwasser (RFLW)
    * Add more stations

Travel::Status::DE::IRIS 1.40 - Tue Dec 25 2019

    * Incorporate the last few years' worth of station name changes

Travel::Status::DE::IRIS 1.39 - Tue Dec 17 2019

    * Add missing geocoordinates to nearly all remaining stations
      (thanks to @marudor)
    * Add stations opened this year (thanks to @marudor)

Travel::Status::DE::IRIS 1.38 - Sun Dec 15 2019

    * Add geocoordinates for belgian stations
      (patch by https://github.com/Knuspel)
    * New IRIS option: "keep_transfers"

Travel::Status::DE::IRIS 1.37 - Sat Dec 07 2019

    * Add geocoordinates for french stations served by Thalys/TGV
      (patch by Florian Wurzel)

Travel::Status::DE::IRIS 1.36 - Fri Nov 22 2019

    * Update stations list, prune duplicates and outdated entries
      (251 additions, 155 deletions). Incorporates patches by Moritz Schlarb
      and https://github.com/Knuspel -- Thanks!